feat: Enable Babel standalone for JSX transformation
Integrates @babel/standalone to allow JSX to be written directly in the index.tsx file, simplifying local development and testing without a full build step. Updates the service worker cache to include the Babel CDN.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4-Player Score Keeper</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
     <!-- PWA / iPhone Home Screen Meta Tags -->
     <link rel="manifest" href="/manifest.json">
@@ -27,7 +28,7 @@
   </head>
   <body class="bg-gray-900">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
